--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
     <script>
         const images = [
             {
-                src: '/4.jpg',
+                src: './4.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Sel dan Mikroskop',
                 category: 'bab1'
             },
             {
-                src: '/3.jpg',
+                src: './3.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Bagian-Bagian Mikroskop',
                 category: 'bab1'
             },
             {
-                src: '/2.jpg',
+                src: './2.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Bagian-Bagian Mikroskop',
                 category: 'bab1'
             },
             {
-                src: '/1.jpg',
+                src: './1.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Struktur Sel',
                 category: 'bab1'
