--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
     <script>
         const images = [
             {
-                src: 'https://github.com/MRAN-XYZ/GALERY/blob/main/4.jpg',
+                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/4.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Sel dan Mikroskop',
                 category: 'bab1'
             },
             {
-                src: 'https://github.com/MRAN-XYZ/GALERY/blob/main/3.jpg',
+                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/3.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Bagian-Bagian Mikroskop',
                 category: 'bab1'
             },
             {
-                src: 'https://github.com/MRAN-XYZ/GALERY/blob/main/2.jpg',
+                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/2.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Bagian-Bagian Mikroskop',
                 category: 'bab1'
             },
             {
-                src: 'https://github.com/MRAN-XYZ/GALERY/blob/main/1.jpg',
+                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/1.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Struktur Sel',
                 category: 'bab1'
