--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
     <script>
         const images = [
             {
-                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/4.jpg',
+                src: 'https://i.imghippo.com/files/Iopw5677zqg.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Sel dan Mikroskop',
                 category: 'bab1'
             },
             {
-                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/3.jpg',
+                src: 'https://i.imghippo.com/files/gKTQ4502Dxs.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Bagian-Bagian Mikroskop',
                 category: 'bab1'
             },
             {
-                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/2.jpg',
+                src: 'https://i.imghippo.com/files/fFT9149gHg.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Bagian-Bagian Mikroskop',
                 category: 'bab1'
             },
             {
-                src: 'https://raw.githubusercontent.com/MRAN-XYZ/GALERY/refs/heads/main/1.jpg',
+                src: 'https://i.imghippo.com/files/TPs1009itw.jpg',
                 title: 'Catatan Bab 1',
                 description: 'Struktur Sel',
                 category: 'bab1'
